[package]
name = "prec"
version = "1.0.0"
authors = ["mcpar-land <john@mcpar.land>"]
license = "MIT"
description = "A generic operator-precedence parser library"
homepage = "https://github.com/mcpar-land/prec"
documentation = "https://docs.rs/prec"
repository = "https://github.com/mcpar-land/prec"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
lazy_static = "1.4.0"